Fixes tweets wrapping around avatar within the twitter widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -667,13 +667,19 @@ input[type="search"]::-webkit-search-decoration {
 	padding: 0 1.33%;
 }
 
-.twitter-profile-pic {
-	width: 60px;
-	padding: 6px 0 0 0;
+.widget.twitter .twitter-profile-pic {
+	width: 12%;
+	margin-right: 3%;
 	img {
 		border-radius: 100%;
 	}
 }
+
+.twitter-content {
+	float: left;
+	width: 85%;
+}
+
 .widget.twitter {
 	p {
 		display: inline;
